LibGdxLauncher added for graphic